[project]
name = "whoogle-search"
description = "Self-hosted, ad-free, privacy-respecting metasearch engine"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Ben Busby", email = "contact@benbusby.com" }
]
maintainers = [
    {name = "jurgenwigg", email = "jurgenwigg@protonmail.com" }
]

dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "tox", "pytest"]
test = ["pytest", "pytest-cov", "black", "pylint", "tox"]
build = ["build"]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
